--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>欢迎页</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <div class="top">
+        <div class="top_content"></div>
+    </div>
+    <div class="body">
+        <div class="body_img"></div>
+        <div class="body_content">
+            <div class="body_bulletin"></div>
+        </div>
+    </div>
+    <div class="bottom">
+        <div class="bottom_content"></div>
+        <div class="bottom_subnav"></div>
+    </div>
 </body>
 </html>
